# buqi

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/cli/: Cargo.toml  buqic.rs
src/lib/: Cargo.toml  lib.rs
src/wayland/: Cargo.toml
