[package]
name = "buqic"
version = "0.0.1"
authors = ["Gris Ge <cnfourt@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Command line tool for Buqi"
homepage = "https://github.com/cathay4t/buqi"
repository = "https://github.com/cathay4t/buqi"
keywords = ["network"]
categories = ["network-programming", "os"]

[[bin]]
name = "buqic"
path = "buqic.rs"

[dependencies]
buqi = {path = "../lib", version = "0.0.1"}
clap = { version = "3.1.18", features = ["cargo"] }
