[package]
name = "wbuqi"
version = "0.0.1"
authors = ["Gris Ge <cnfourt@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Syncing wayland clipboard using buqi"
homepage = "https://github.com/cathay4t/buqi"
repository = "https://github.com/cathay4t/buqi"
keywords = ["network"]
categories = ["network-programming", "os"]

[[bin]]
name = "wbuqi"
path = "wbuqi.rs"

[dependencies]
buqi = {path = "../lib", version = "0.0.1"}
